Event API get getby id post.
